--- a/src/AzureIpRangeExplorer/AzureIpRangeExplorer/Pages/RangeExplorer.razor
+++ b/src/AzureIpRangeExplorer/AzureIpRangeExplorer/Pages/RangeExplorer.razor
@@ -1,6 +1,5 @@
 ﻿@page "/"
 @inject HttpClient Http
-@inject NavigationManager NavigationManager
 
 <PageTitle>Azure IP Range Explorer</PageTitle>
 
@@ -9,21 +8,23 @@
 <p>View Azure IP ranges of Azure by region and service:</p>
 
 <div class="mb-3">
-    <label for="region" class="form-label">Region:</label>
-    <select @bind="SelectedRegion" class="form-select" id="region">
-        @foreach(string region in Regions)
+    <label for="service" class="form-label">Service:</label>
+    <select @bind="SelectedService" class="form-select" id="service">
+        <option value="" selected="selected">Select a service</option>
+        @foreach (string service in Services)
         {
-            <option value="@region">@region</option>
+            <option value="@service">@service</option>
         }
     </select>
 </div>
 
 <div class="mb-3">
-    <label for="service" class="form-label">Service:</label>
-    <select @bind="SelectedService" class="form-select" id="service">
-        @foreach(string service in Services)
+    <label for="region" class="form-label">Region:</label>
+    <select @bind="SelectedRegion" class="form-select" disabled="@(DisableRegionFilter)" id="region">
+        <option value="" selected="selected">Select a region</option>
+        @foreach (string region in Regions)
         {
-            <option value="@service">@service</option>
+            <option value="@region">@region</option>
         }
     </select>
 </div>
@@ -44,52 +45,21 @@ else
         </tr>
         </thead>
         <tbody>
-        @foreach (var serviceRange in ranges.Values.Where(serviceRange 
-                      => serviceRange.Properties.Region == SelectedRegion
-                      && serviceRange.Properties.SystemService == SelectedService))
+        @if (SelectedRange != null) 
         {
             <tr>
-                <td>@serviceRange.Properties.SystemService</td>
-                <td>@serviceRange.Properties.Region</td>
+                <td>@SelectedRange.Properties.SystemService</td>
+                <td>@SelectedRange.Properties.Region</td>
             </tr>
             <tr>
                 <td colspan="2">
-                @foreach (string addressPrefix in serviceRange.Properties.AddressPrefixes)
-                {
-                    @addressPrefix<br />
-                }
+                    @foreach (string addressPrefix in SelectedRange.Properties.AddressPrefixes)
+                    {
+                        @addressPrefix<br/>
+                    }
                 </td>
             </tr>
         }
         </tbody>
     </table>
-}
-
-@code {
-    private string currentVersion = "20240415";
-    
-    private AzureIpRanges? ranges;
-    
-    private IEnumerable<string> Regions => ranges?.Values.Select(range => range.Properties.Region).Distinct() ?? Enumerable.Empty<string>();
-
-    private string? SelectedRegion { get; set; }
-    
-    private string[] Services => ranges?.Values.Select(range => range.Properties.SystemService).Distinct().ToArray() ?? Array.Empty<string>();
-    
-    private string? SelectedService { get; set; }
-    
-    protected override async Task OnInitializedAsync()
-    {
-        Uri? uri = NavigationManager.ToAbsoluteUri(NavigationManager.Uri);
-        
-        
-        ranges = await Http.GetFromJsonAsync<AzureIpRanges>($"azure-ranges/ServiceTags_Public_{currentVersion}.json");
-    }
-
-    public record AzureIpRanges(int ChangeNumber, string Cloud, AzureServiceRange[] Values);
-
-    public record AzureServiceRange(string Name, AzureServiceRangeProperties Properties);
-
-    public record AzureServiceRangeProperties(string Region, string[] AddressPrefixes, string SystemService);
-
 }
